--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,12 @@
 name: Deploy to GitHub Pages
-
+#AFTER MAKING CHANGES AND COMMITING TO GITHUB DO THE GIT THING IN CMD LINE IT WORKS
 on:
   push:
     branches:
       - main
     paths:
-      - '.github/workflows/deploy.yml'
-      - 'robotics/**'
+      - ".github/workflows/deploy.yml"
+      - "robotics/**"
     # Review gh actions docs if you want to further define triggers, paths, etc
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
 
