--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ name: Deploy to GitHub Pages
 
 #AFTER DONE WITH ALL THAT DO GIT PULL MAIN to get all the current up-to-date code from there, then work from there and git push
 
-#tl;dr : git pull, git add ., git push, 
+#tl;dr : git pull, git add ., git push, yarn deploy
 on:
   push:
     branches:
